build args formatting using pipe

--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -50,5 +50,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: chiragmdeekshith/tinyurl:latest
-        build-args: ARG_DB_USERNAME=${{ secrets.ARG_DB_USERNAME }},ARG_DB_PASSWORD=${{ secrets.ARG_DB_PASSWORD }}
+        tags: ${{ secrets.DOCKER_USERNAME }}/tinyurl:latest
+        build-args: |
+          ARG_DB_USERNAME=${{ secrets.ARG_DB_USERNAME }}
+          ARG_DB_PASSWORD=${{ secrets.ARG_DB_PASSWORD }}
